Fixed blurry circles in zoomout mode

--- a/site/.vuepress/theme/styles/index.styl
+++ b/site/.vuepress/theme/styles/index.styl
@@ -44,13 +44,12 @@ p > span, h1, h2, h3 {
 
 .bg-circle-right
   position: relative
-  overflow: hidden
 
   &::before
     content: ''
     position: absolute
-    top: 20%
-    left: 100%
+    top: 10%
+    left: 60%
     transform: translate(-20%)
     width: 30rem;
     height: 30rem;
@@ -68,10 +67,10 @@ p > span, h1, h2, h3 {
     content: ''
     position: absolute
     top: 20%
-    left: 0
+    left: 40%
     transform: translate(-80%)
-    width: 40rem;
-    height: 40rem;
+    width: 30rem;
+    height: 30rem;
     background-color: #e077ff
     border-radius: 50%
     filter: blur(8.4375rem)
